=======
CHANGES
=======

Version 2.0.0 (unreleased)
--------------------------

- Feature: Added labelRequired and requiredInfo form attributes. This is
  useful for conditional rendering a required info legend in form templates.
  The requiredInfo label depends by default on a given lableRequired message id
  and will only return the label if at least one widget field is required.

- Feature: Add support for refreshing actions after their execution. This
  is useful when button action conditions are changing as a result of
  action execution. All you need is to set the ``refreshActions`` flag
  of the form to True in your action handler.

- Bug: FieldWidgets update where appending keys and values within each
  update call. Now the util.Manager uses a UniqueOrderedKeys implementation
  which will ensure that we can't add duplicted manager keys. The implementation
  also ensures that we can't override the UniqueOrderedKeys instace with a new
  list by using a decorator. If this UniqueOrderedKeys implementation doesn't
  fit for all use cases, we should probably use a customized UserList
  implementation. Now we can call widgets.update() more then one time without
  any side effect.

- Bug: ButtonActions update where appending keys and values within each
  update call. Now we can call actions.update() more then one time without
  any side effect.

- Bug: The CollectionSequenceDataConverter no longer throws a
  "TypeError: 'NoneType' object is not iterable" when passed the value
  of a non-required field (which in the case of a List field is None).

- Feature: Added support for using sources. Where is was previosly possible to
  use a vocabulary it is now also possible to use a source. This works both
  for basic and contextual sources.

  IMPORTANT: The `ChoiceTerms` and and CollectionTerms in ``z3c.form.term``
  are now simple functions that quieries for real ITerms adapters for
  field's source or value_type respectively. So if your code inherits